--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#065F56</color>
-    <color name="colorAccent">#06B4A3</color>
+    <color name="colorPrimary">#1B721F</color>
+    <color name="colorPrimaryDark">#11270D</color>
+    <color name="colorAccent">#2B920D</color>
 </resources>
