--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/just_a_logo"
-        android:src="@drawable/ic_launcher_foreground" />
+        android:src="@drawable/logo_1_" />
 
     <TextView
         android:id="@+id/questionText"
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:text=""
         android:textSize="18sp"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         />
 
 
