--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,13 +45,33 @@
 
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/next_button"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:src="@android:drawable/ic_media_next"
-        android:contentDescription="@string/next" />
+        android:orientation="horizontal"
+        android:paddingTop="30dp"  >
+
+        <ImageButton
+            android:id="@+id/previous_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:paddingTop="5dp"
+            android:src="@android:drawable/ic_media_previous"
+            android:contentDescription="@string/previous"  />
+
+        <ImageButton
+            android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:paddingTop="5dp"
+            android:src="@android:drawable/ic_media_next"
+            android:contentDescription="@string/next" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/answer"
